--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "install:all-packages": "pnpm install --frozen-lockfile"
   },
   "dependencies": {
+    "@tanstack/react-router": "^1.132.47",
+    "@tanstack/router-devtools": "^1.133.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
