--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@tanstack/react-router": "^1.132.47",
     "@tanstack/router-devtools": "^1.133.1",
+    "@tanstack/router-plugin": "^1.132.56",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
