--- a/.github/workflows/deploy_frontend_to_pages.yml
+++ b/.github/workflows/deploy_frontend_to_pages.yml
@@ -28,6 +28,8 @@ jobs:
           npm install --legacy-peer
    
       - name: Build Frontend App
+        env:
+          DEPLOYMENT_TIMESTAMP: ${{ github.event.head_commit.timestamp || github.run_started_at }}
         run: |
           npm run build      
  
